5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1575_579.log
== TEST (2019-03-13 13:39:44) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundação");
-- OUTPUT:
A UFAM tem 110 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:40:11) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundação");
-- EXECUTION TIME:
0.152553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/579/main.py", line 1, in <module>
    print("A UFAM tem",2019-1909,"anos de funda\xe7\xe3o");
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:40:23) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundação");
-- OUTPUT:
A UFAM tem 110 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:41:12) 
-- CODE:
print(A UFAM tem 2019-1909 anos de fundacao);
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem 2019-1909 anos de fundacao);
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:42:13) 
-- CODE:
print( 'A UFAM tem' 2019-1909'' anos de fundacao')
-- ERROR:
File "XXXX", line 1
    print( 'A UFAM tem' 2019-1909'' anos de fundacao')
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:42:46) 
-- CODE:
print( 'A UFAM tem' 2019-1909 'anos de fundacao')
-- ERROR:
File "XXXX", line 1
    print( 'A UFAM tem' 2019-1909 'anos de fundacao')
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:02:54) 
-- CODE:
print( 'A UFAM tem' 2019-1909 'anos de fundacao.')
-- ERROR:
File "XXXX", line 1
    print( 'A UFAM tem' 2019-1909 'anos de fundacao.')
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:03:09) 
-- CODE:
print( 'A UFAM tem', 2019-1909, 'anos de fundacao.')
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:03:17) 
-- CODE:
print( 'A UFAM tem', 2019-1909, 'anos de fundacao.')
-- EXECUTION TIME:
0.168646
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:03:40) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.')
-- EXECUTION TIME:
0.170056
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:03:54) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.')
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:04:27) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- EXECUTION TIME:
0.176736
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:05:06) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- EXECUTION TIME:
0.211339
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:05:08) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:06:23) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:06:54) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- EXECUTION TIME:
0.221752
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:21:09) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- EXECUTION TIME:
0.187775
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:21:11) 
-- CODE:
print( 'A UFAM tem',2019-1909,'anos de fundacao.');
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:21:35) 
-- CODE:
print('A UFAM tem',2019-1909,'anos de fundacao.');
-- EXECUTION TIME:
0.152589
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:21:38) 
-- CODE:
print('A UFAM tem',2019-1909,'anos de fundacao.');
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:22:54) 
-- CODE:
print('A UFAM tem',2016-1909,'anos de fundacao.');
-- EXECUTION TIME:
0.141749
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
